--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -2,6 +2,9 @@
 {% block title %}Home Page{% endblock %}
 
 {% block content %}
+
+{% include 'partials/topnav.html'%}
+
 <div class="row ">
     <div class="col-md-6 my-4">
         <div class="bg-white">
