--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -1,1 +1,16 @@
 {% extends 'partials/base.html' %}
+{% block title %}Registration Page{% endblock %}
+
+{% block content %}
+<div class="row my-4">
+    <div class="col-md-6 offset-md-3">
+        <div class="border p-3 bg-white">
+            <h4>Register Page</h4>
+            <hr>
+            <form method="POST">
+                <input class="btn btn-success" type="submit" value="Register">
+            </form>
+        </div>
+    </div>
+</div>
+{% endblock %}
