--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -1,6 +1,6 @@
 {% extends 'partials/base.html' %}
 {% block title %}Registration Page{% endblock %}
-
+{% load crispy_forms_tags %}
 {% block content %}
 <div class="row my-4">
     <div class="col-md-6 offset-md-3">
@@ -8,6 +8,8 @@
             <h4>Register Page</h4>
             <hr>
             <form method="POST">
+                {% csrf_token %}
+                {{ form|crispy }}
                 <input class="btn btn-success" type="submit" value="Register">
             </form>
         </div>
