--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -24,7 +24,7 @@
                     <a class="nav-link text-white" href="{% url 'user-logout' %}">Logout</a>
                 </li>
             </ul>
-            
+            {% else %}
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
                     <a class="nav-link text-white" href="{% url 'user-register' %}">Register <span
