Add login authorization

--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -3,6 +3,8 @@
 
 {% block content %}
 
+{% if user.is_athenticated and.is_staff and user.is_superuser %}
+
 {% include 'partials/topnav.html'%}
 
 <div class="row ">
@@ -99,4 +101,9 @@
         </div>
     </div>
 </div>
+
+{% else %}
+{% include 'dashboard/staff_index.html' %}
+{% endif %}
+
 {% endblock %}
